# erpnext_engineering

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  MANIFEST.ini  README.md  git_tag.sh  git_upd.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
erpnext_engineering/: MANIFEST.ini  __init__.py  engineering-setup.py  engineering_setup.py  hooks.py  install.py  manifest.json  migrate.py  patches.txt  setup.py  uninstall.py
erpnext_engineering/api/: api.py  permissions.py
erpnext_engineering/config/: desktop.py  docs.py
erpnext_engineering/engineering/: __init__.py  api.py
erpnext_engineering/engineering/client_script/: README.md  engineering_script_item_item_coding_table_prefix_check.js
erpnext_engineering/engineering/doctype/item_coding_table/: item_coding_table.js  item_coding_table.json  item_coding_table.py  test_item_coding_table.py
erpnext_engineering/engineering/doctype/item_revision/: item_revision.js  item_revision.json  item_revision.py  test_item_revision.py
erpnext_engineering/engineering/doctype/item_version/: item_version.json
erpnext_engineering/engineering/doctype/workspace/: workspace.json  workspace.json.bkp  workspace_content.json  workspace_link.json
erpnext_engineering/engineering/overrides/: item.py
erpnext_engineering/engineering/workspace/engineering/: content.json  engineering.json  link.json  links.json  shortcuts.json
erpnext_engineering/fixtures/: client_script.json  custom_field.json  property_setter.json  workspace.json
erpnext_engineering/locale/: it.po  main.pot
erpnext_engineering/patches/: 20250903_migrate_item_coding_table_prefix_var.py  20250903_migrate_item_link_var_to_prefix.py
erpnext_engineering/translations/: it.csv
erpnext_engineering/workspace/: Engineering.json
