[project]
name = "erpnext_engineering"
authors = [
    { name = "Teodoro P.", email = "teodoropiccinni@example.com"}
]
description = "ERPNext Engineering module providing comprehensive engineering management features including project planning, resource allocation, technical documentation, and engineering workflows for manufacturing and construction projects."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[tool.frappe]
required_apps = ["erpnext"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"