[project]
name = "erpnext_engineering"
authors = [
    { name = "Teodoro PICCINNI", email = "studio@teodoropiccinni.com"}
]
description = "Engineering module to provide advanced fucntionalities and custom configurations for engineering teams."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe>=15.0.0,<16.0.0",
    "erpnext>=15.0.0,<16.0.0"
]

[tool.git.submodules]
erpnext_tpdev_helper = { url = "git@github.com:teodoropiccinni/erpnext_tpdev_helper.git", path = "erpnext_engineering/tools/erpnext_tpdev_helper" }

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint.isort.sections]
"frappe" = ["frappe"]
"erpnext" = ["erpnext"]
"hrms" = ["hrms"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "frappe",
    "erpnext",
    "hrms",
    "first-party",
    "local-folder",
]


[project.urls]
Homepage = "https://www.teodoropiccinni.com/products/erpnext_carworkshop"
Repository = "https://github.com/teodoropiccinni/erpnext_carworkshop.git"
"Bug Reports" = "https://github.com/teodoropiccinni/erpnext_carworkshop/issues"


[tool.bench.frappe-dependencies]
frappe = ">=15.0.0-dev,<16.0.0"
erpnext = ">=15.0.0-dev,<16.0.0"
